<resources>
    <string name="app_name">Can I Skip?</string>
    <string name="email_prompt">E-Mail:</string>
    <string name="password_prompt">Password:</string>
    <string name="log_in">Log In</string>
    <string name="please_wait">Please Wait…</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_failed_message">Please check your credentials and try again.</string>

    <!-- Strings related to login -->
    <string name="nav_day">By Day</string>
    <string name="nav_subject">By Subject</string>
    <string name="nav_settings">Settings</string>

    <string name="baseurl_standard">Standard</string>
    <string name="baseurl_custom_suffix">Custom domain suffix</string>
    <string name="baseurl_prompt">Choose your login URL</string>


    <string name="topbar_by_day">Able to skip by day</string>
    <string name="topbar_by_subject">Able to skip by subject</string>
    <string name="topbar_login">Log In</string>
    <string name="topbar_settings">Settings</string>

    <string name="current_attendance">Currently: %1$s%%</string>


    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>


    <string name="current_attendance_rate">Current Attendance: %1$s%%</string>

    <string name="refresh">Refresh</string>
    <string name="fill_all_fields">Please fill in all fields</string>

    <string name="choose_school">Choose your school</string>
    <string name="choose_student">Choose your student</string>

    <string name="set_safety">Amount of weeks required for safety</string>
    <string name="set_safety_desc">This is used for calculating the proper step color for the skips, the provided amount of weeks determine what\'s considered 100%%.</string>

    <string name="set_attendance">Target attendance</string>
    <string name="set_attendance_desc">Your targeted attendance, used for calculating how many classes you can skip..</string>

    <string name="set_toggle_negatives">Are negative skips enabled?</string>
    <string name="set_toggle_negatives_desc">If enabled the amount of times you can skip will be able to go below 0, telling you how many times you have to attend to reach your target attendance.</string>

    <string name="set_disable_subjects">Disabled subjects</string>
    <string name="set_disable_subjects_desc">Allows you to disable subjects from being counted into the amount of days you are allowed to skip. Useful if you don\'t attend certain classes like Religion.</string>


    <string name="set_steps">Amount of steps</string>
    <string name="set_steps_desc">Customize the amount of color steps used for the skips.</string>
    <string name="set_step">Step %1$s</string>

    <string name="set_timetable">Timetable</string>
    <string name="set_timetable_desc">Rebuilding a timetable is a delicate process. Do it only if you have to. Doesn\'t require saving.</string>
    <string name="rebuild">Rebuild</string>

    <string name="log_out">Log out</string>
    <string name="log_out_desc">This will log you out of the app.</string>

    <string name="save">Save</string>

    <string name="pick_color">Pick the color</string>

    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="no_internet">No internet connection</string>
    <string name="refreshing">Refreshing</string>
    <string name="refreshed">Refreshed</string>

    <string name="subject">Subject</string>
</resources>