<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context=".MainActivity">



    <Button
        android:id="@+id/log_in_button"
        android:layout_width="235dp"
        android:layout_height="67dp"

        android:layout_marginBottom="72dp"



        android:text="@string/log_in"

        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldEmail"
        android:layout_width="320dp"
        android:layout_height="90dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"

        android:layout_marginBottom="28dp"
        android:hint="@string/email_prompt"





        app:boxBackgroundMode="filled"




        app:layout_constraintBottom_toTopOf="@+id/textFieldPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/mail"
       >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:id="@+id/textFieldPassword"
        android:layout_width="320dp"
        android:layout_height="90dp"

        android:layout_marginBottom="28dp"
        android:hint="@string/password_prompt"




        app:boxBackgroundMode="filled"

        app:layout_constraintBottom_toTopOf="@+id/baseUrlList"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"

        app:passwordToggleEnabled="true"

        app:startIconDrawable="@drawable/password"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/baseUrlList"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="320dp"
        android:layout_height="90dp"

        android:layout_marginBottom="156dp"
        android:hint="@string/baseurl_prompt"
        app:layout_constraintBottom_toTopOf="@+id/log_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/link"









        >

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="none"



             />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="290dp"
        android:layout_height="100dp"
        android:text="@string/app_name"
        android:textAlignment="center"

        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textFieldEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.519" />


</androidx.constraintlayout.widget.ConstraintLayout>